--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <!-- University Header -->
         <div class="header">
             <div class="university-info">
+                      <img src="assets/nwus-logo.JPG" alt="NWUS Logo" class="university-logo" id="universityLogo">
                 <h1>NORTHWEST UNIVERSITY SOKOTO</h1>
                 <p class="motto">Knowledge Excellence and Success</p>
                 <p class="university-code">(NWUS)</p>
@@ -188,4 +189,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
