--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <!-- University Header -->
         <div class="header">
             <div class="university-info">
-                      <img src="assets/nwus-logo.JPEG" alt="NWUS Logo" class="university-logo" id="universityLogo">
+                      <img src="assets/university-logo.JPEG" alt="NWUS Logo" class="university-logo" id="universityLogo">
                 <h1>NORTHWEST UNIVERSITY SOKOTO</h1>
                 <p class="motto">Knowledge Excellence and Success</p>
                 <p class="university-code">(NWUS)</p>
@@ -191,4 +191,5 @@
 </body>
 
 </html>
+
 
